# mlops_gcp

./: .gitignore  Dockerfile  app.yaml  cloudbuild.yaml  requirements.txt
.github/workflows/: main.yml
MLOps/: pyvenv.cfg
deploy_gcp/: sentiment_analisys.ipynb
mlops_gcp/: .gitignore  Makefile  README.md  cloudbuild.yaml  env_vars.yaml  pyproject.toml  requirements.txt
mlops_gcp/.github/workflows/: cloud-run.yaml
mlops_gcp/mlops_gcp/: main.py
